server/server.log
/Users/smallshark/Desktop/works/Data Visualization/期末/server/routes/api.js:1616
const path = require("path");
      ^

SyntaxError: Identifier 'path' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1763:18)
    at Module._compile (node:internal/modules/cjs/loader:1804:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1961:10)
    at Module.load (node:internal/modules/cjs/loader:1553:32)
    at Module._load (node:internal/modules/cjs/loader:1355:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.require (node:internal/modules/cjs/loader:1576:12)
    at require (node:internal/modules/helpers:153:16)
    at Object.<anonymous> (/Users/smallshark/Desktop/works/Data Visualization/期末/server/index.js:5:19)
    at Module._compile (node:internal/modules/cjs/loader:1830:14)

Node.js v24.15.0
